feat: 完善一些基本信息，添加了测试环境的图片服务的支持 feat: 添加了商家端的一些操作。

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -54,7 +54,8 @@ mybatis-plus:
 
 
 application:
-  log_dir: /home/app
+  file_path: D:\GraduationDesign\images
+  url_prefix: http://images.svwh.top/
 
 
 
