--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -1,81 +1,59 @@
 server:
-  port: 8080
+  port: 8083
 spring:
   application:
-    name: lost-found-test
+    name: medicine-mall
   # mysql 配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://172.17.0.1:3306/lost_and_found?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
-    username: svwh
-    password: svwh2002219
+    url: jdbc:mysql:///medicine-mall?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
+    username: root
+    password: 123456
     type: com.alibaba.druid.pool.DruidDataSource
   servlet:
     multipart:
       max-file-size: 5MB
       max-request-size: 5MB
-  # redis 配置
-  redis:
-    host: 101.34.215.131
-    port: 6379
-    database: 10
-    password: svwh2002219
-    connect-timeout: 5000
-    timeout: 3000
-    # jedis 连接池配置
-    jedis:
-      pool:
-        max-active: 8
-        max-idle: 8
-        min-idle: 0
-        max-wait: -1
-
-mybatis:
-  mapper-locations: classpath:com/experiment/lostandfoundsystem/mapper/*.xml
+#  # redis 配置
+#  redis:
+#    host: 101.34.215.131
+#    port: 6379
+#    database: 10
+#    password: svwh2002219
+#    connect-timeout: 5000
+#    timeout: 3000
+#    # jedis 连接池配置
+#    jedis:
+#      pool:
+#        max-active: 8
+#        max-idle: 8
+#        min-idle: 0
+#        max-wait: -1
+mybatis-plus:
+  mapper-locations: classpath:/mapper/**.xml
   configuration:
+    # MyBatis 配置
     map-underscore-to-camel-case: true
+  global-config:
+    # 全局配置
+    db-config:
+      # 数据库配置
+      id-type: auto
 
-# 开启mybatis查询日志
-logging:
-  config:
-    classpath:logback-logstash.xml
+## 开启mybatis查询日志
+#logging:
+#  config:
+#    classpath:logback-logstash.xml
+#  level:
+#    com:
+#      experiment:
+#        management:
+#          lostandfoundsystem:
+#            dao:
+#              debug
 
-# netty 配置
-
-websocket:
-  netty:
-    port: 58080
-    path: /webSocket
-
-# minio 分布式文件系统配置
-minio:
-  host-url: http://101.34.215.131:9000
-  access: lost_found
-  secret: lost_found
-
-# 配置邮件发送账号
-mail-service:
-  mail-infos:
-    - host-name: smtp.qq.com
-      username: cmanager@qq.com
-      password: ccfsywtccmjxeahj
-      from-sender: cmanager@qq.com
-      sender-rank: 3
-    - host-name: smtp.qq.com
-      username: 480252715@qq.com
-      password: amuixyxrpdbmbhjb
-      from-sender: 480252715@qq.com
-      sender-rank: 4
-    - host-name: smtp.163.com
-      username: cxkchenxin@163.com
-      password: WYHFMEUWWRSBEXNQ
-      from-sender: cxkchenxin@163.com
-      sender-rank: 8
-
+# 图片文件保存的位置.
 application:
-  log_dir: /home/app
+  file_path: /root/webs/mall/images
+  url_prefix: http://images.svwh.top/
 
-# logstash 配置
-logstash:
-  host: 101.34.215.131
-  port: 5044
