fix：更正了开发环境下，图片文件的前缀访问路径，适配file访问协议。

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -54,7 +54,7 @@ mybatis-plus:
 
 
 application:
-  file_path: D:\GraduationDesign\images
+  file_path: D:/GraduationDesign/images/
   url_prefix: http://images.svwh.top/
 
 
