--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -57,5 +57,21 @@ application:
   file_path: D:/GraduationDesign/images/
   url_prefix: http://images.svwh.top/
 
-
-
+# 配置邮件发送账号
+mail-service:
+  mail-infos:
+    - host-name: smtp.qq.com
+      username: cmanager@qq.com
+      password: ccfsywtccmjxeahj
+      from-sender: cmanager@qq.com
+      sender-rank: 3
+    - host-name: smtp.qq.com
+      username: 480252715@qq.com
+      password: amuixyxrpdbmbhjb
+      from-sender: 480252715@qq.com
+      sender-rank: 4
+    - host-name: smtp.163.com
+      username: cxkchenxin@163.com
+      password: WYHFMEUWWRSBEXNQ
+      from-sender: cxkchenxin@163.com
+      sender-rank: 8
